--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
+  <meta name="google-site-verification" content="EwPtEdLJXa_n8pU8hiUygHjS-7KL1QvxZc6ufTn5zOk" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Step-by-step guide on how to login StartMail securely and efficiently." />
   <title>How to Login StartMail</title>
